--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "proxy": "http://localhost:5000/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,6 +15,7 @@
     "react-dom": "^18.3.1",
     "react-pageloom": "^0.1.5",
     "react-scroll": "^1.9.0",
+    "serve": "^14.2.4",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
